# seqGraph

./: .gitignore  CMakeLists.txt  README.md  extract_ref.cpp  g.c.txt  g.c2.txt  g.debug.f.400.re.txt  g.debug.f.400.txt  g.debug.f.sparse.txt  g.debug.f.txt  g.f.txt  g.r.txt  g.r2.txt  g.txt  graph.g  jaccard_full_contig.cpp  jaccard_full_contig.h  main.cpp  r.debug.400.re.txt  r.debug.400.txt  r.debug.800.txt  r.debug.c.0.txt  r.debug.c.1558174.txt  r.debug.c.400.re.txt  r.debug.c.400.txt  r.debug.c.522446.txt  r.debug.c.800.txt  r.debug.c.debug800.txt  r.debug.c.latest.800.txt  r.debug.c.latest400.txt  r.debug.c.sim1300.txt  r.debug.c.sim400.bk.txt  r.debug.c.sim400.txt  r.debug.c.sim800.txt  r.debug.c.test.txt  r.debug.c.txt  r.debug.cneosim800.txt  r.debug.txt  re800.txt  res.fa  (+2 more)
include/: Edge.h  EndPoint.h  EndPoint3.h  EndPoint5.h  Exceptions.h  Graph.h  InnerEdge.h  Junction.h  OuterEdge.h  Vertex.h  VertexMeta.h  Weight.h  cxxopts.hpp  matching.h  util.h
scripts/: ERR1297651_0_NZ_AP019728.1.txt  ERR1297651_11_NZ_CP076688.1.txt  ERR1297651_12_NZ_CP070113.1.txt  ERR1297651_13_NZ_CP054355.1.txt  ERR1297651_14_NZ_CP069921.1.txt  ERR1297651_15_LR890664.1.txt  ERR1297651_16_NZ_CP048362.1.txt  ERR1297651_17_NZ_CP076692.1.txt  ERR1297651_19_NZ_CP071523.1.txt  ERR1297651_1_NZ_CP072211.1.txt  ERR1297651_20_NZ_LR890605.1.txt  ERR1297651_21_NZ_MT230338.1.txt  ERR1297651_22_NZ_CP069491.1.txt  ERR1297651_23_NZ_CP069553.1.txt  ERR1297651_25_NZ_MH229772.1.txt  ERR1297651_26_AP018534.1.txt  ERR1297651_27_NZ_CP036543.1.txt  ERR1297651_28_NZ_CP051852.1.txt  ERR1297651_2_NZ_CP072241.1.txt  ERR1297651_3_NZ_CP072240.1.txt  ERR1297651_4_NZ_CP044099.1.txt  ERR1297651_5_NZ_LR130565.1.txt  ERR1297651_6_NZ_AJ437107.1.txt  ERR1297651_7_NZ_LR890511.1.txt  ERR1297651_8_NZ_MT230180.1.txt  ERR1297651_9_NZ_CP054346.1.txt  ERR1297651_ass_blast.txt  algo.py  bam2graph.py  cycle_res.txt  encode.c  encode.pyx  extract_simple_cycle.py  fastg2.py  filter_cycle.py  filter_unconfidence.py  find_plasmid_gene_matches.py  g.txt  get_raw_bkp.py  get_ref_by_index.py  (+24 more)
src/: Edge.cpp  EndPoint.cpp  EndPoint3.cpp  EndPoint5.cpp  Exception.cpp  Graph.cpp  InnerEdge.cpp  Junction.cpp  OuterEdge.cpp  Vertex.cpp  VertexMeta.cpp  Weight.cpp  matching.cpp
test/: 50.txt  BJ01.bipart  BJ01.out  BJ05.out  ST.out  ST540.out  ST540_strain.graph.txt  Strain_52148.graph.txt  bw.txt  demo.tgs.txt  demo.txt  demo1.txt  demo2.txt  matching.cpp.bk  out
utils/: bDistance.cpp  bDistance.h  e_result_reads.cpp  e_result_reads.h  reads_overlap.cpp  reads_overlap.h
